--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                     <label for="link">Chainlink</label>
                     <input id="link" type="checkbox"/>
                 </div>
-                <button id=databtn>Show me the prices</button>
+                <br>
+                <button type="button" id=databtn class="btn btn-primary">Show me the prices</button>
             </div>
+            <br>
             <br>
               
         </div>
